  use KnnVectorQuery against fields encoded as BYTE (Ben Trent)

* GITHUB#11997: Introduce IntField, LongField, FloatField and DoubleField.
  These new fields index both 1D points and sorted numeric doc values and
  provide best performance for filtering and sorting.
  (Francisco Fernández Castaño, Adrien Grand)

New Features
---------------------
* GITHUB#11795: Add ByteWritesTrackingDirectoryWrapper to expose metrics for bytes merged, flushed, and overall
  write amplification factor. (Marc D'Mello)

* GITHUB#11929: MMapDirectory gives more granular control on which files to
  preload. (Adrien Grand, Uwe Schindler)

* GITHUB#11999: MemoryIndex now supports stored fields. (Alan Woodward)

* GITHUB#11997: Add IntField, LongField, FloatField and DoubleField: easy to
  use numeric fields that perform well both for filtering and sorting.
  (Francisco Fernández Castaño)

* GITHUB#12033: Support for Java 19 foreign memory support is now enabled by default,
  no need to pass "--enable-preview" on the command line. If exactly Java 19 is used,
  MMapDirectory will mmap Lucene indexes in chunks of 16 GiB (instead of 1 GiB) and
  indexes closed while queries are running can no longer crash the JVM.
  To disable this feature, pass the following sysprop on Java command line:
  "-Dorg.apache.lucene.store.MMapDirectory.enableMemorySegments=false" (Uwe Schindler)

* GITHUB#11869: RangeOnRangeFacetCounts added, supporting numeric range "relationship" faceting over docvalue-stored
  ranges. (Marc D'Mello)

Improvements
---------------------
* GITHUB#11778: Detailed part-of-speech information for particle(조사) and ending(어미) on Nori
  is now tagged. (Namgyu Kim)

* GITHUB#11785: Improve Tessellator performance by delaying calls to the method
  #isIntersectingPolygon (Ignacio Vera)

* GITHUB#687: speed up IndexSortSortedNumericDocValuesRangeQuery#BoundedDocIdSetIterator
  construction using bkd binary search. (Jianping Weng)
